# borgrdr

./: Cargo.toml  README.md
src/: aes_ctr.rs  bincode_codec.rs  compress.rs  crypto.rs  diag.rs  fs_store.rs  hashindex.rs  lib.rs  main.rs  pipeline.rs  progress.rs  repository.rs  rmp_codec.rs  rpc.rs  segments.rs  store.rs  structs.rs
src/cliutil/: mod.rs
src/rpc/: borg.rs  internal.rs  mod.rs  worker.rs
